created two modules, will update if online

--- a/index.html
+++ b/index.html
@@ -4,21 +4,52 @@
   <meta charset="UTF-8">
   <title>Twitch Streamers</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-  <div class="jumbotron">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 text-center">
+      <div class="col-md-12 text-center">
         <h1>Twitch Streamers</h1>
       </div>
     </div>
-  </div>
+
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 module" id="freecodecamp-module">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/freecodecamp-profile_image-d9514f2df0962329-300x300.png">
+          </div>
+          <div class="col-md-3">
+            <h4><a href="https://www.twitch.tv/freecodecamp" target="_blank">FreeCodeCamp</a></h4>
+          </div>
+          <div class="col-md-7 text-center">
+            <h4><i id="freecodecamp-message">Offline</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 module" id="thehypoxiaxp-module">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/thehypoxiaxp-profile_image-4e4fd2631881ed0e-300x300.png">
+          </div>
+          <div class="col-md-3">
+            <h4><a href="https://www.twitch.tv/thehypoxiaxp" target="_blank">TheHypoxiaXP</a></h4>
+          </div>
+          <div class="col-md-7 text-center">
+            <h4><i id="thehypoxiaxp-message">Offline</i></h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script src="script.js"></script>
 </body>
 </html>
