close italics tag

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h4><a href="https://www.twitch.tv/freecodecamp" target="_blank">FreeCodeCamp</a></h4>
           </div>
           <div class="col-md-7 text-center">
-            <h4><i id="freecodecamp-message">Offline</h4>
+            <h4><i id="freecodecamp-message">Offline</i></h4>
           </div>
         </div>
       </div>
