five more modules

--- a/index.html
+++ b/index.html
@@ -48,6 +48,91 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 module" id="esl_sc2-module">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/esl_sc2-profile_image-d6db9488cec97125-300x300.jpeg">
+          </div>
+          <div class="col-md-3">
+            <h4><a href="https://www.twitch.tv/esl_sc2" target="_blank">ESL_SC2</a></h4>
+          </div>
+          <div class="col-md-7 text-center">
+            <h4><i id="esl_sc2-message">Offline</i></h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 module" id="ogamingsc2-module">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/ogamingsc2-profile_image-9021dccf9399929e-300x300.jpeg">
+          </div>
+          <div class="col-md-3">
+            <h4><a href="https://www.twitch.tv/ogamingsc2" target="_blank">OgamingSC2</a></h4>
+          </div>
+          <div class="col-md-7 text-center">
+            <h4><i id="ogamingsc2-message">Offline</i></h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 module" id="shannanina-module">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/shannanina-profile_image-9c0acb3cce33caa3-300x300.jpeg">
+          </div>
+          <div class="col-md-3">
+            <h4><a href="https://www.twitch.tv/shannanina" target="_blank">ShannaNina</a></h4>
+          </div>
+          <div class="col-md-7 text-center">
+            <h4><i id="shannanina-message">Offline</i></h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 module" id="misscoookiez-module">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/misscoookiez-profile_image-ecd7a4b8f226c6a2-300x300.jpeg">
+          </div>
+          <div class="col-md-3">
+            <h4><a href="https://www.twitch.tv/misscoookiez" target="_blank">MissCoookiez</a></h4>
+          </div>
+          <div class="col-md-7 text-center">
+            <h4><i id="misscoookiez-message">Offline</i></h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 module" id="drezzdie-module">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/drezzdie-profile_image-316cb52c76c8ef21-300x300.jpeg">
+          </div>
+          <div class="col-md-3">
+            <h4><a href="https://www.twitch.tv/drezzdie" target="_blank">drezzdie</a></h4>
+          </div>
+          <div class="col-md-7 text-center">
+            <h4><i id="drezzdie-message">Offline</i></h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="script.js"></script>
