--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <h1>Twitch Streamers</h1>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6 module" id="freecodecamp-module">
@@ -30,7 +29,6 @@
         </div>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6 module" id="thehypoxiaxp-module">
@@ -47,7 +45,6 @@
         </div>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6 module" id="esl_sc2-module">
@@ -64,7 +61,6 @@
         </div>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6 module" id="ogamingsc2-module">
@@ -81,7 +77,6 @@
         </div>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6 module" id="shannanina-module">
@@ -98,7 +93,6 @@
         </div>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6 module" id="misscoookiez-module">
@@ -115,7 +109,6 @@
         </div>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6 module" id="drezzdie-module">
@@ -132,7 +125,20 @@
         </div>
       </div>
     </div>
-
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6 module" id="comster404-module">
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-3">
+            <h4><a href="https://www.twitch.tv/comster404" target="_blank">comster404</a></h4>
+          </div>
+          <div class="col-md-7 text-center">
+            <h4><i id="comster404-message">Offline</i></h4>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="script.js"></script>
